<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <group >
        <item
            android:id="@+id/toolbar_table_edit"
            android:icon="@drawable/ic_toolbar_edit"
            android:title="@string/main_activity_toolbar_menu_table_edit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/toolbar_edit"
            android:icon="@drawable/ic_toolbar_order"
            android:title="@string/main_activity_toolbar_menu_edit_mode"
            app:showAsAction="always"/>
        <item
            android:id="@+id/toolbar_save_picture"
            android:title="@string/main_activity_toolbar_menu_save_picture"
            app:showAsAction="never" />
        <item
            android:id="@+id/toolbar_share"
            android:icon="@drawable/ic_toolbar_share"
            android:title="@string/main_activity_toolbar_menu_share"
            app:showAsAction="never" />
    </group>
</menu>