<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_time_dialog_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <NumberPicker
            android:id="@+id/startTimeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text=":"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/startTimeHour"
            app:layout_constraintStart_toEndOf="@+id/startTimeHour"
            app:layout_constraintTop_toTopOf="@+id/startTimeHour" />

        <NumberPicker
            android:id="@+id/startTimeMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="-"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/startTimeHour"
            app:layout_constraintStart_toEndOf="@+id/startTimeMinute"
            app:layout_constraintTop_toTopOf="@+id/startTimeHour" />

        <NumberPicker
            android:id="@+id/endTimeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text=":"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/startTimeHour"
            app:layout_constraintStart_toEndOf="@+id/endTimeHour"
            app:layout_constraintTop_toTopOf="@+id/startTimeHour" />

        <NumberPicker
            android:id="@+id/endTimeMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/course_time_dialog_negative_button_text" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/course_time_dialog_positive_button_text" />

    </LinearLayout>
</LinearLayout>